--- a/GPT4-Version/templates/video_result.html
+++ b/GPT4-Version/templates/video_result.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>Vidéo Générée</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
         <h1>Vidéo Générée</h1>
-        <video width="320" height="240" controls>
+        <video width="640" height="480" controls>
             <source src="{{ video_url }}" type="video/mp4">
             Votre navigateur ne supporte pas la balise vidéo.
         </video>
