--- a/GPT4-Version/templates/result.html
+++ b/GPT4-Version/templates/result.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Résultat de Génération</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='result.css') }}">
 </head>
 <body>
     <div class="container">
