--- a/GPT4-Version/templates/play.html
+++ b/GPT4-Version/templates/play.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Play Track</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='play.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.7.0/nouislider.min.css">
     <style>
         .slider {
