--- a/GPT4-Version/templates/video_result.html
+++ b/GPT4-Version/templates/video_result.html
@@ -12,8 +12,8 @@
             Votre navigateur ne supporte pas la balise vidéo.
         </video>
         <div>
-            <a href="/" class="button">Retour</a>
-            <a href="/music_choice" class="button">Choisir Musique</a>
+            <a href="{{ url_for('index') }}" class="button">Retour</a>
+            <a href="{{ url_for('music_choice') }}" class="button">Choisir Musique</a>
         </div>
     </div>
 </body>
