--- a/GPT4-Version/templates/show_video.html
+++ b/GPT4-Version/templates/show_video.html
@@ -11,7 +11,7 @@
             <h1>Vidéo Créée</h1>
         </header>
         <video width="640" height="480" controls>
-            <source src="{{ url_for('static', filename=video_path.split('/')[-1]) }}" type="video/mp4">
+            <source src="{{ video_path }}" type="video/mp4">
             Votre navigateur ne supporte pas l'élément vidéo.
         </video>
         <a href="{{ url_for('generate_text') }}">Retour à l'accueil</a>
