--- a/GPT4-Version/static/image_result.css
+++ b/GPT4-Version/static/image_result.css
@@ -88,7 +88,7 @@ h1.title {
 }
 
 .card-info h1 {
-    font-size: 0.8em; /* Smaller font size *m/
+    font-size: 0.8em; /* Smaller font size *m3/
     margin: 0;
     font-style: italic; /* Italic text */
     font-weight: normal; /* Non-bold text */
