code bon avec image?

--- a/GPT4-Version/templates/show_video.html
+++ b/GPT4-Version/templates/show_video.html
@@ -14,7 +14,7 @@
             <source src="{{ video_path }}" type="video/mp4">
             Votre navigateur ne supporte pas l'élément vidéo.
         </video>
-        <a href="{{ url_for('generate_text') }}">Retour à l'accueil</a>
+        <a href="{{ url_for('index') }}">Retour à l'accueil</a>
     </div>
 </body>
 </html>
