--- a/GPT4-Version/static/music_choice.css
+++ b/GPT4-Version/static/music_choice.css
@@ -73,7 +73,6 @@ h2 {
 
 .track-item {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 10px;
     border-bottom: 1px solid #ddd;
@@ -84,8 +83,25 @@ h2 {
 }
 
 .track-info {
-    flex: 1;
+    flex: 2;
     margin-right: 20px;
+}
+
+.track-info span {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.track-item audio {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.select-form {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .track-item button {
