--- a/GPT4-Version/templates/index.html
+++ b/GPT4-Version/templates/index.html
@@ -21,9 +21,13 @@
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
+    {% if 'user_email' in session %}
+      <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right">{{ session['user_email'] }}</a>
+      <a href="/logout" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">Logout</a>
+    {% else %}
+      <a href="/login" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">Login</a>
+      <a href="/signup" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">Signup</a>
+    {% endif %}
   </div>
 
   <!-- Navbar on small screens -->
@@ -31,7 +35,13 @@
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">OUR GENERATION</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
+    {% if 'user_email' in session %}
+      <a href="#" class="w3-bar-item w3-button">{{ session['user_email'] }}</a>
+      <a href="/logout" class="w3-bar-item w3-button">Logout</a>
+    {% else %}
+      <a href="/login" class="w3-bar-item w3-button">Login</a>
+      <a href="/signup" class="w3-bar-item w3-button">Signup</a>
+    {% endif %}
   </div>
 </div>
 
@@ -48,18 +58,26 @@
   <p class="w3-center"><em>Entrez votre prompt pour générer du texte</em></p>
   <div class="boxes-container">
     <div class="container">
+      {% if 'user_email' in session %}
       <form action="/generate_text" method="post">
           <label for="prompt">Prompt:</label>
           <input type="text" id="prompt" name="prompt" required>
           <input type="submit" value="Générer">
       </form>
+      {% else %}
+      <p class="w3-center"><em>Veuillez vous connecter pour utiliser le générateur de texte.</em></p>
+      {% endif %}
     </div>
     <div class="container">
+      {% if 'user_email' in session %}
       <form action="/use_text" method="post">
           <label for="prompt2">Texte Préparé:</label>
           <input type="text" id="prompt2" name="prompt2" required>
           <input type="submit" value="Utiliser">
       </form>
+      {% else %}
+      <p class="w3-center"><em>Veuillez vous connecter pour utiliser le texte préparé.</em></p>
+      {% endif %}
     </div>
   </div>
 </div>
