add likes - no percentage

--- a/GPT4-Version/templates/result.html
+++ b/GPT4-Version/templates/result.html
@@ -14,8 +14,21 @@
             <input type="hidden" name="text" value="{{ image_prompt|safe }}" />
             <button type="submit">Générer Images</button>
         </form>
-
+        <form action="/add_like" method="post" id="incrementForm">
+            <input type="hidden" name="model_url" id="model_url" value="{{ model_url }}" />
+            <input type="hidden" name="response" id="response" value="{{ response }}" />
+            <input type="hidden" name="image_prompt" id="image_prompt" value="{{ image_prompt }}" />
+            <button type="submit">Je suis satisfait des résultats de ce modèle.</button>
+            <output id="incrementOuput"></output>
+        </form>
         <a href="/">Retour</a>
     </div>
+<script>
+        document.getElementById('incrementForm').addEventListener('submit', function(event) {
+            // event.preventDefault();
+            var modelId = document.getElementById('model_url').value;
+            document.getElementById('incrementOuput').innerHTML = "Like envoyé, les modèles proposés sont mis à jour."
+        });
+</script>
 </body>
 </html>
