test regenerate image

--- a/GPT4-Version/templates/image_result.html
+++ b/GPT4-Version/templates/image_result.html
@@ -57,7 +57,7 @@
                       if (card) {
                           const cardElement = card.querySelector('.card');
                           cardElement.style.backgroundImage = `url('${data.image_url}')`;
-                          document.querySelector('.title').innerText = 'TESSSSSSSSST'; // Change title for regenerated image
+                          document.querySelector('.title').innerText = 'Une image a été regénérée'; // Change title for regenerated image
                       }
                   } else {
                       console.error('Failed to regenerate image');
