--- a/GPT4-Version/templates/music_choice.html
+++ b/GPT4-Version/templates/music_choice.html
@@ -18,7 +18,7 @@
         <section>
             <h2>Top Tracks</h2>
             <ul class="track-list">
-                {% for track in mood_tracks %}
+                {% for track in top_tracks %}
                     <li class="track-item">
                         <div class="track-info">
                             <span>{{ track['name'] }} par {{ track['artist_name'] }}</span>
@@ -73,4 +73,4 @@
         </section>
     </div>
 </body>
-</html>
+</html>A
